--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,5 +14,6 @@
   "short_stories_12" : "Short story 12",
   "short_stories_13" : "Short story 13",
   "short_stories_14" : "Short story 14",
-  "short_stories_15" : "Short story 15"
+  "short_stories_15" : "Short story 15",
+  "morning": "Morning"
 }
