--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -1,6 +1,6 @@
 {
   "day": "Day",
-  "short_stories_1" : "Short story 1",
+  "short_stories_1" : "Short story \"1",
   "short_stories_2" : "Short story 2",
   "short_stories_3" : "Short story \"3",
   "short_stories_4" : "Short story 4",
