feat: Adds morning title

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,5 +15,7 @@
   "short_stories_13" : "Short story 13",
   "short_stories_14" : "Short story 14",
   "short_stories_15" : "Short story 15",
-  "morning": "Morning"
+  "morning": "Morning",
+  "morning_title_1" : "Monitor & Regulate Your Routine",
+  "morning_title_2" : "Start your day on the right foot"
 }
