--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,6 +8,30 @@
     " ss 5",
     " ss 6",
     " ss 7",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81"
+  ],
+  "affirmations":  [
+    " ss 1",
+    " ss 23",
+    " ss 3",
+    " ss 4",
+    " ss 5",
+    " ss 6",
+    " ss 7",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
     " ss 81"
   ],
   "morning": "Morning",
