feat: Implements array in affirmations + activity

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -34,6 +34,23 @@
     " ss 81",
     " ss 81"
   ],
+  "activity":  [
+    " ss 1",
+    " ss 23",
+    " ss 3",
+    " ss 4",
+    " ss 5",
+    " ss 6",
+    " ss 7",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81"
+  ],
   "morning": "Morning",
   "morning_title_1" : "Monitor & Regulate Your Routine",
   "morning_title_2" : "Start your day on the right foot"
