faet: Adds strings

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "day": "Day",
   "short_stories":  [
-    " ss 1",
+    "Stop \n wasting your \n time the same joke over and over. So why are you always crying about the same problem?'",
     " ss 23",
     " ss 3",
     " ss 4",
@@ -18,38 +18,38 @@
     " ss 81"
   ],
   "affirmations":  [
-    " ss 1",
-    " ss 23",
-    " ss 3",
-    " ss 4",
-    " ss 5",
-    " ss 6",
-    " ss 7",
-    " ss 81",
-    " ss 81",
-    " ss 81",
-    " ss 81",
-    " ss 81",
-    " ss 81",
-    " ss 81",
-    " ss 81"
+    " You are beautiful inside out. Appreciate YOU.",
+    " You are worthy of loving and being Loved. Love yourself. ",
+    " Believe in your goals and dreams. Believe",
+    " Stop worrying about things you can't control. Change what you can.",
+    " Today CHOOSE to think positive",
+    " Instead of thinking \"why is this happening to me\" think, \"what is this teaching me\"",
+    " Instead of saying \"I give up\",  say, \" this is hard, but I'm going to keep trying\"",
+    " Appreciate the little things today. Your family, friends, simple food, your breath and YOU. You are enough.",
+    " Practice smiling. Smile at yourself. Smile at the silliest of things. Life is easy if you let it be.",
+    " Don't compare yourself to anyone. You are Unique. You are Amazing. Appreciate Yourself today.",
+    " Take a pause & Breathe. Stop overthinking, and take one day at a time.",
+    " Surround yourself with people you love and who love you back",
+    " You inhale confidence and exhale fear",
+    " Having a bad day is okay. It doesn't stop there. Everything is temporary.",
+    " You are exactly where you need to be"
   ],
   "activity":  [
-    " ss 1",
-    " ss 23",
-    " ss 3",
-    " ss 4",
-    " ss 5",
-    " ss 6",
-    " ss 7",
-    " ss 81",
-    " ss 81",
-    " ss 81",
-    " ss 81",
-    " ss 81",
-    " ss 81",
-    " ss 81",
-    " ss 81"
+    " Write down 5 things that matter the most to you.",
+    " Take a paper make a boat out of it. Write your life's biggest dream on it. Now take some water and make it sail.",
+    " Write down top 5 things you will do once you are out of your current situation? Now write 2 steps for each thing that you can take to be closer to it",
+    " Today, listen to your favorite music",
+    " Draw or paint, with whatever you have. A pen, pencil or any colours",
+    " Look at a few plants today closely. Observe how they grow and absorb it all in",
+    " Count the colours in your room. Which colour is your favorite?",
+    " Go down the memory lane, what do you most cherish from your past?",
+    " Talk to a friend who you haven't talked to in a long time",
+    " Write a letter to yourself when you are 5 years older than today",
+    " Cherish your favourite food. Cook something simple if you can",
+    " Count how many glasses of water did you drink today. Do you hydrate enough?",
+    " Learn something new, a new thought, a new social media trick, how to use a new App anything",
+    " Take a piece of paper and create an airplane. Now write your name on it. Fly it. You are almost there",
+    " Listen to a new podcast or new music"
   ],
   "morning": "Morning",
   "morning_title_1" : "Monitor & Regulate Your Routine",
