faet: Adds strings hi

--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -1,19 +1,57 @@
 {
-  "day": "Day",
-  "short_stories_1" : "Short story \"1",
-  "short_stories_2" : "Short story 2",
-  "short_stories_3" : "Short story \"3",
-  "short_stories_4" : "Short story 4",
-  "short_stories_5" : "Short story 5",
-  "short_stories_6" : "Short story 6",
-  "short_stories_7" : "Short story 7",
-  "short_stories_8" : "Short story 8",
-  "short_stories_9" : "Short story 9",
-  "short_stories_10" : "Short story 10",
-  "short_stories_11" : "Short story 11",
-  "short_stories_12" : "Short story 12",
-  "short_stories_13" : "Short story 13",
-  "short_stories_14" : "Short story 14",
-  "short_stories_15" : "Short story 15",
-  "morning": "Morning"
+  "day": "दिन",
+  "short_stories":  [
+    "Stop wasting your time the same joke over and over. So why are you always crying about the same problem?'",
+    " ss 23",
+    " ss 3",
+    " ss 4",
+    " ss 5",
+    " ss 6",
+    " ss 7",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81",
+    " ss 81"
+  ],
+  "affirmations":  [
+    "आप सुंदर हैं। अपनी सराहना करें।",
+    "आप प्यार करने और प्यार करने के योग्य हैं। खुद से प्यार करें।",
+    "अपने लक्ष्यों और सपनों पर विश्वास करें।",
+    "उन चीजों के बारे में चिंता करना बंद करें जिन्हें आप नियंत्रित नहीं कर सकते। जो आप बदल सकते हैं उसे बदलें।",
+    "आज सकारात्मक सोचें",
+    "यह सोचने के बजाय \"मेरे साथ ऐसा क्यों हो रहा है\" सोचें, \"यह मुझे क्या सिखा रहा है\"",
+    "\"मैं हार मान लेता हूँ\" कहने के बजाय, कहो, \" यह कठिन है, लेकिन मैं कोशिश करता रहूंगा\"",
+    "आज छोटी-छोटी चीजों की सराहना करें। आपका परिवार, दोस्त, सादा भोजन, आपकी सांसें और आप। आप ही काफी हैं।",
+    "मुस्कुराने का अभ्यास करें। अपने आप पर मुस्कुराएं। छोटी छोटी चीजों पर मुस्कुराएं। जीवन आसान है अगर आप इसे रहने दें तो।",
+    "अपनी तुलना किसी से न करें। आप अद्वितीय हैं। आप अद्भुत हैं। आज खुद की सराहना करें।",
+    "एक विराम लें और सांस लें। अधिक सोचना बंद करें, और एक एक दिन जियें",
+    "अपने आप को उन लोगों के साथ घेरें जिन्हें आप प्यार करते हैं और जो आपसे प्यार करते हैं",
+    "आप सांस में आत्मविश्वास अंदर लेते हैं और भय बहार छोड़ते हैं",
+    "बुरा दिन होना कोई बड़ी बात नहीं है। समय यहीं नहीं रुकता। सब कुछ अस्थायी है अऊर बदलता है।",
+    "आप ठीक वहीं हैं जहां आपको होना चाहिए"
+  ],
+  "activity":  [
+    "5 चीजें लिखिए जो आपके लिए सबसे ज्यादा मायने रखती हैं।",
+    "एक कागज लें, उससे से एक नाव बनाएं। उस पर अपने जीवन का सबसे बड़ा सपना लिखे। अब थोड़ा पानी लें और इस नाव को तैरायें। ",
+    "अपनी वर्तमान स्थिति से बाहर निकलने के बाद आप जो 5 चीजें करेंगे, उन्हें लिखे।  अब प्रत्येक चीज़ के लिए 2 चरण लिखें जो आप उसके करीब होने के लिए ले सकते हैं",
+    "आज, अपना पसंदीदा संगीत सुनें",
+    "आपके पास जो कुछ भी है, उससे ड्रा या पेंट करें। एक पेन, पेंसिल या कोई भी रंग",
+    "आज कुछ पौधों को बारीकी से देखें। देखें कि वे कैसे बढ़ते हैं और इसे सभी में अवशोषित करते हैं",
+    "अपने कमरे में रंगों की गणना करें। आपका पसंदीदा रंग कौन सा है?",
+    "अपनी यादों को तराशें, आप अपने अतीत से सबसे ज्यादा क्या संजोते हैं?",
+    "उस दोस्त से बात करें जिससे आपने लंबे समय से बात नहीं की है",
+    "आप आज से 5 साल बड़े खुद को एक पत्र लिखें",
+    "अपने पसंदीदा भोजन का आनंद लें। यदि आप कर सकते हैं तो कुछ आसान पकाएं",
+    "गिनें कि आपने आज कितने गिलास पानी पिया। क्या आप पर्याप्त हाइड्रेट करते हैं?",
+    "कुछ नया सीखें, एक नया विचार, एक नई सोशल मीडिया ट्रिक, किसी नए ऐप का उपयोग कैसे करें",
+    "कागज का एक टुकड़ा लें और एक हवाई जहाज बनाएं। अब उस पर अपना नाम लिखें। इसे उड़ाएं। आप लगभग वहां हैं",
+    "नया पॉडकास्ट या नया संगीत सुनें"
+  ],
+  "morning": "सुबह",
+  "morning_title_1" : "अपनी दिनचर्या की निगरानी और विनियमन करें",
+  "morning_title_2" : "अपने दिन की शुरुआत सही से करें"
 }
