feat: Adds all other changes

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -53,5 +53,6 @@
   ],
   "morning": "Morning",
   "morning_title_1" : "Monitor & Regulate Your Routine",
-  "morning_title_2" : "Start your day on the right foot"
+  "morning_title_2" : "Start your day on the right foot",
+"complete":  "Complete"
 }
