--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -53,5 +53,23 @@
   ],
   "morning": "Morning",
   "morning_title_1" : "Monitor & Regulate Your Routine",
-  "morning_title_2" : "Start your day on the right foot"
+  "morning_title_2" : "Start your day on the right foot",
+"complete":  "Complete",
+  "days": [
+    "Day 1",
+    "Day 2",
+    "Day 3",
+    "Day 4",
+    "Day 5",
+    "Day 6",
+    "Day 7",
+    "Day 8",
+    "Day 9",
+    "Day 10",
+    "Day 11",
+    "Day 12",
+    "Day 13",
+    "Day 14",
+    "Day 15"
+  ]
 }
