--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -54,7 +54,50 @@
   "morning": "Morning",
   "morning_title_1" : "Monitor & Regulate Your Routine",
   "morning_title_2" : "Start your day on the right foot",
-"complete":  "Complete",
+  "morning_title_3" : "General",
+  "morning_title_4" : "Gargles",
+  "morning_title_5" : "Gargling with warm salt water will help ease the discomfort and irritation caused by a dry cough.",
+  "morning_title_6" : "Medicine",
+  "morning_title_7" : "Take Prescribed Medicines on Time",
+  "morning_title_8" : "Breathing Exercises",
+  "morning_title_9" : "Deep breathing can help reduce stress & increase lung capacity.",
+  "morning_title_10" : "Body Temperature",
+  "morning_title_11" : "Take your temperature via thermometer or Infra Scanner",
+  "morning_title_12" : "Blood Pressure",
+  "morning_title_13" : "Monitor BP If Prescribed by your doctor",
+  "morning_title_14" : "Pulse Rate",
+  "morning_title_15" : "Monitor Pulse rate as prescribed by your doctor",
+  "morning_title_16" : "Oxygen Saturation",
+  "morning_title_17" : "Monitor O2 Saturation as prescribed by your doctor",
+  "morning_title_18" : "Breakfast",
+  "morning_title_19" : "Have a nutritious breakfast on time focusing on whole foods",
+  "home_title_1" : "Today is a beautiful day...",
+  "home_title_2" : "Daily Morning Routine",
+  "home_title_3" : "Positive Affirmations",
+  "home_title_4" : "Gratitude",
+  "home_title_5" : "Short Story",
+  "home_title_6" : "Activity",
+  "home_title_7" : "Journal",
+  "journal_title_1" : "Write about Your Day today",
+  "journal_title_2" : "Today my day started with...",
+  "journal_title_3" : "Details",
+  "journal_title_4" : "I smiled today",
+  "journal_title_5" : "I appreciate myself",
+  "gratitude_title_1" : "What are you most grateful for today",
+  "gratitude_title_2" : "I am grateful for...",
+  "gratitude_title_3" : "write your thought",
+  "gratitude_title_4" : "I am grateful for Me",
+  "gratitude_title_5" : "I smiled today",
+  "ss_title_1" : "Short stories to bring you back to savour the happiness in tiny moments.",
+  "ss_title_2" : "Read today's story and retrospect",
+  "affirmation_title_1" : "Positive Affirmations can help you feel at peace and boost positive vibes. It's a wonderful way to keep going through the day!",
+  "affirmation_title_2" : "Scratch to see today's Affirmation",
+  "activity_title_1" : "Simple activities will bring your attention to your present and let you appreciate your surroundings. It's a wonderful world and YOU belong here!",
+  "activity_title_2" : "Scratch to see today's Activity",
+  "title_social":  "Created using Nysa App. Download now: www.tablenotes.net",
+  "skipscratch":  "Skip Scratch",
+  "reset":  "Reset",
+  "complete":  "Complete",
   "days": [
     "Day 1",
     "Day 2",
