--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -53,5 +53,48 @@
   ],
   "morning": "सुबह",
   "morning_title_1" : "अपनी दिनचर्या की निगरानी और विनियमन करें",
-  "morning_title_2" : "अपने दिन की शुरुआत सही से करें"
+  "morning_title_2" : "अपने दिन की शुरुआत सही से करें",  
+  "morning_title_3" : "सामान्य",
+  "morning_title_4" : "गरारे",
+  "morning_title_5" : "गर्म नमक के पानी से गरारे करने से सूखी खांसी के कारण होने वाली परेशानी और जलन को कम करने में मदद मिलेगी।",
+  "morning_title_6" : "Medicine",
+  "morning_title_7" : "निर्धारित दवाएं समय पर लें",
+  "morning_title_8" : "श्वास व्यायाम",
+  "morning_title_9" : "गहरी सांस लेने से तनाव कम करने और फेफड़ों की क्षमता बढ़ाने में मदद मिल सकती है।",
+  "morning_title_10" : "शरीर का तापमान",
+  "morning_title_11" : "थर्मामीटर या इंफ़्रा स्कैनर से अपना तापमान लें",
+  "morning_title_12" : "रक्तचाप",
+  "morning_title_13" : "अगर आपके डॉक्टर ने बताया है तो बीपी पर नज़र रखें",
+  "morning_title_14" : "पल्स रेट",
+  "morning_title_15" : "डॉक्टर द्वारा बताई गई पल्स रेट पर नज़र रखें",
+  "morning_title_16" : "ऑक्सीजन संतृप्ति",
+  "morning_title_17" : "आपके डॉक्टर के बताए अनुसार O2 की सैचुरेशन की निगरानी करें",
+  "morning_title_18" : "नाश्ता",
+  "morning_title_19": "संपूर्ण भोजन पर ध्यान केंद्रित करते हुए समय पर पौष्टिक नाश्ता करें",
+  "home_title_1": "आज का दिन खूबसूरत है...",
+  "home_title_2": "दैनिक मॉर्निंग रूटीन",
+  "home_title_3": "सकारात्मक पुष्टि",
+  "home_title_4": "आभार",
+  "home_title_5": "लघु कहानी",
+  "home_title_6": "गतिविधि",
+  "home_title_7": "जर्नल",
+  "journal_title_1" : "आज के दिन के बारे में लिखें",
+  "journal_title_2" : "आज मेरे दिन की शुरुआत...",
+  "journal_title_3" : "विवरण",
+  "journal_title_4" : "आज मैं मुस्कुराया",
+  "journal_title_5" : "मैं खुद की सराहना करता हूँ",
+  "gratitude_title_1" : "आज के लिए आप सबसे अधिक आभारी क्या हैं",
+  "gratitude_title_2" : "मैं आभारी हूं...",
+  "gratitude_title_3" : "अपना विचार लिखें",
+  "gratitude_title_4" : "मैं अपने लिए आभारी हूँ",
+  "gratitude_title_5" : "आज मैं मुस्कुराया",
+  "ss_title_1" : "छोटे-छोटे पलों में खुशियों का स्वाद चखने के लिए आपको वापस लाने के लिए लघु कथाएँ।",
+  "ss_title_2" : "आज की कहानी पढ़ें और पीछे मुड़कर देखें",
+  "affirmation_title_1" : "सकारात्मक पुष्टि आपको शांति का अनुभव करने और सकारात्मक ऊर्जा को बढ़ाने में मदद कर सकती है। यह दिन को जारी रखने का एक शानदार तरीका है!",
+  "affirmation_title_2" : "आज की पुष्टि देखने के लिए स्क्रैच करें",
+  "activity_title_1" : "सरल गतिविधियां आपका ध्यान आपके वर्तमान की ओर आकर्षित करेंगी और आपको अपने परिवेश की सराहना करने देंगी। यह एक अद्भुत दुनिया है और आप यहां हैं",
+  "activity_title_2" : "आज की गतिविधि देखने के लिए स्क्रैच करें",
+  "skipscratch":  "स्किप स्क्रैच",
+  "reset":  "रीसेट",
+  "complete":  "पूर्ण"
 }
