--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -88,6 +88,8 @@
   "gratitude_title_3" : "write your thought",
   "gratitude_title_4" : "I am grateful for Me",
   "gratitude_title_5" : "I smiled today",
+  "gratitude_title_6" : "Share your Gratitude",
+  "gratitude_title_7" : "My gratitude for today...",
   "ss_title_1" : "Short stories to bring you back to savour the happiness in tiny moments.",
   "ss_title_2" : "Read today's story and retrospect",
   "affirmation_title_1" : "Positive Affirmations can help you feel at peace and boost positive vibes. It's a wonderful way to keep going through the day!",
