--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -88,12 +88,15 @@
   "gratitude_title_3" : "अपना विचार लिखें",
   "gratitude_title_4" : "मैं अपने लिए आभारी हूँ",
   "gratitude_title_5" : "आज मैं मुस्कुराया",
+  "gratitude_title_6" : "अपना आभार साझा करें",
+  "gratitude_title_7" : "आज के लिए मेरा आभार...",
   "ss_title_1" : "छोटे-छोटे पलों में खुशियों का स्वाद चखने के लिए आपको वापस लाने के लिए लघु कथाएँ।",
   "ss_title_2" : "आज की कहानी पढ़ें और पीछे मुड़कर देखें",
   "affirmation_title_1" : "सकारात्मक पुष्टि आपको शांति का अनुभव करने और सकारात्मक ऊर्जा को बढ़ाने में मदद कर सकती है। यह दिन को जारी रखने का एक शानदार तरीका है!",
   "affirmation_title_2" : "आज की पुष्टि देखने के लिए स्क्रैच करें",
   "activity_title_1" : "सरल गतिविधियां आपका ध्यान आपके वर्तमान की ओर आकर्षित करेंगी और आपको अपने परिवेश की सराहना करने देंगी। यह एक अद्भुत दुनिया है और आप यहां हैं",
   "activity_title_2" : "आज की गतिविधि देखने के लिए स्क्रैच करें",
+  "title_social":  "नायसा ऐप का उपयोग करके बनाया गया। अभी डाउनलोड करें: www.tablenotes.net",
   "skipscratch":  "स्किप स्क्रैच",
   "reset":  "रीसेट",
   "complete":  "पूर्ण"
