--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -97,7 +97,7 @@
   "activity_title_1" : "सरल गतिविधियां आपका ध्यान आपके वर्तमान की ओर आकर्षित करेंगी और आपको अपने परिवेश की सराहना करने देंगी। यह एक अद्भुत दुनिया है और आप यहां हैं",
   "activity_title_2" : "आज की गतिविधि देखने के लिए स्क्रैच करें",
   "title_social":  "नायसा ऐप का उपयोग करके बनाया गया। अभी डाउनलोड करें: www.tablenotes.net",
-  "skipscratch":  "स्किप स्क्रैच",
+  "SkipScratch":  "स्किप स्क्रैच",
   "reset":  "रीसेट",
   "complete":  "पूर्ण"
 }
