--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -1,5 +1,15 @@
 {
   "day": "दिन",
+  "Home": "होम",
+  "About": "ऐप के बारे में",
+  "Gratitude": "आभार",
+  "Affirmations":"सकारात्मक पुष्टि",
+  "Journal": "जर्नल",
+  "Activity":"गतिविधि",
+  "ShortStory":"लघु कहानी",
+  "Morning": "मॉर्निंग रूटीन",
+  "about_title_1":"नायसा ऐप के बारे में",
+  "about_title_2":"हालाँकि सामाजिक भेद हम में से कई लोगों के लिए एक नया शब्द है, कुछ अलगाव वर्तमान हालत से बहुत पहले जीवन का एक तरीका रहा है जिसने हमारी दुनिया को उल्टा कर दिया, और हमारे क्षितिज को हमारे अपने घरों के कोनों तक सीमित कर दिया। नायसा ऐप आपको शेड्यूल बनाए रखने और दैनिक विकल्पों के साथ आपको बढ़ावा देने के द्वारा अलगाव के माध्यम से प्राप्त करने के लिए कुछ सुझाव देता है। मानसिक और शारीरिक स्वास्थ्य को बनाए रखते हुए अकेले रहने और दूसरों के अलावा काम करने के लिए जरूरी है - और शायद दूसरे पक्ष से बाहर आकर थोड़ा और मजबूत ह। नायसा ऐप।",
   "short_stories":  [
     " एक बुद्धिमान व्यक्ति को एक बार ऐसे लोगों के समूह का सामना करना पड़ा जो एक ही मुद्दे के बारे में बार-बार शिकायत कर रहे थे। एक दिन, शिकायतों को सुनने के बजाय, उन्होंने उन्हें एक चुटकुला सुनाया और सभी लोग हंस पड़े। फिर, उस आदमी ने मजाक दोहराया। कुछ लोग मुस्कुराए। अंत में, आदमी ने तीसरी बार मजाक दोहराया लेकिन किसी ने कोई प्रतिक्रिया नहीं दी। वह आदमी मुस्कुराया और कहा, \"आप एक ही मजाक पर एक से अधिक बार नहीं हंसेंगे। तो आपको उसी समस्या के बारे में लगातार शिकायत करने से क्या मिल रहा है?\"",
     " १९४० के दशक में, एक व्यक्ति था, जो ६५ वर्ष की आयु में, एक छोटे से घर में $९९ की सामाजिक सुरक्षा जांच से दूर रह रहा था, एक बीट-अप कार चला रहा था। उसने फैसला किया कि यह बदलाव करने का समय है, इसलिए उसने सोचा इस बारे में कि उसे क्या पेशकश करनी है जिससे अन्य लोग लाभान्वित हो सकते हैं। उसका दिमाग उसकी तली हुई चिकन रेसिपी पर गया, जिसे उसके दोस्त और परिवार प्यार करते थे। उसने अपने गृह राज्य केंटकी को छोड़ दिया और पूरे देश में यात्रा की, रेस्तरां को अपनी रेसिपी बेचने की कोशिश की। यहां तक ​​कि उन्होंने कमाए गए पैसे का केवल एक छोटा सा हिस्सा मांगते हुए मुफ्त में नुस्खा की पेशकश की। हालांकि, अधिकांश रेस्तरां ने उनके प्रस्ताव को अस्वीकार कर दिया। वास्तव में, 1,009 रेस्तरां ने नहीं कहा। लेकिन सभी अस्वीकारों के बाद भी, वह कायम रहा। उन्हें खुद पर और अपनी चिकन रेसिपी पर विश्वास था। जब उन्होंने रेस्तरां #1,010 का दौरा किया, तो उन्हें हाँ मिला। उनका नाम, कर्नल सैंडर्स - आज केएफसी के मालिक।",
@@ -51,7 +61,6 @@
     "कागज का एक टुकड़ा लें और एक हवाई जहाज बनाएं। अब उस पर अपना नाम लिखें। इसे उड़ाएं। आप लगभग वहां हैं",
     "नया पॉडकास्ट या नया संगीत सुनें"
   ],
-  "morning": "सुबह",
   "morning_title_1" : "अपनी दिनचर्या की निगरानी और विनियमन करें",
   "morning_title_2" : "अपने दिन की शुरुआत सही से करें",  
   "morning_title_3" : "सामान्य",
