fix: Corrects app link

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "title_social":  "Created using Nysa App. Download now: https://play.google.com/store/apps/details?id=com.solutiondevelopers.nysa",
   "day": "Day",
   "Home": "Home",
   "About": "About",
@@ -106,7 +107,6 @@
   "affirmation_title_2" : "Scratch to see today's Affirmation",
   "activity_title_1" : "Simple activities will bring your attention to your present and let you appreciate your surroundings. It's a wonderful world and YOU belong here!",
   "activity_title_2" : "Scratch to see today's Activity",
-  "title_social":  "Created using Nysa App. Download now: www.tablenotes.net",
   "SkipScratch":  "Skip Scratch",
   "reset":  "Reset",
   "complete":  "Complete",
