--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -62,7 +62,7 @@
     "नया पॉडकास्ट या नया संगीत सुनें"
   ],
   "morning_title_1" : "अपनी दिनचर्या की निगरानी और विनियमन करें",
-  "morning_title_2" : "अपने दिन की शुरुआत सही से करें",  
+  "morning_title_2" : "अपने दिन की शुरुआत सही से करें",
   "morning_title_3" : "सामान्य",
   "morning_title_4" : "गरारे",
   "morning_title_5" : "गर्म नमक के पानी से गरारे करने से सूखी खांसी के कारण होने वाली परेशानी और जलन को कम करने में मदद मिलेगी।",
@@ -105,7 +105,7 @@
   "affirmation_title_2" : "आज की पुष्टि देखने के लिए स्क्रैच करें",
   "activity_title_1" : "सरल गतिविधियां आपका ध्यान आपके वर्तमान की ओर आकर्षित करेंगी और आपको अपने परिवेश की सराहना करने देंगी। यह एक अद्भुत दुनिया है और आप यहां हैं",
   "activity_title_2" : "आज की गतिविधि देखने के लिए स्क्रैच करें",
-  "title_social":  "नायसा ऐप का उपयोग करके बनाया गया। अभी डाउनलोड करें: www.tablenotes.net",
+  "title_social":  "नायसा ऐप का उपयोग करके बनाया गया। अभी डाउनलोड करें: https://play.google.com/store/apps/details?id=com.solutiondevelopers.nysa",
   "SkipScratch":  "स्किप स्क्रैच",
   "reset":  "रीसेट",
   "complete":  "पूर्ण"
